Changed package domain, updated POM and dependencies